--- a/src/components/Welcome/Welcome.module.css
+++ b/src/components/Welcome/Welcome.module.css
@@ -17,3 +17,18 @@ h1 {
 input {
     color: white;
 }
+@media (max-width: 610px) {
+    .container {
+        width: 100%;
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+    .row {
+    }
+    .col.s12 {
+        width: 100%;
+        margin: 0 auto;
+        left: auto;
+        right: auto;
+    }
+}
